<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint" />

    <EditText
        android:id="@+id/authorInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author_hint" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/readSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_status" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_book" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_book" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_book" />

    <ListView
        android:id="@+id/bookListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />
</LinearLayout>
